# L9

./: .cursorignore  .dockerignore  .env.example  .gitignore  .suite6-config.json  DORA_IMPLEMENTATION_REPORT.md  Go-Live.md  MRI-VPS-RESULTS.md  MRI-VPS.md  Makefile  PRIVATE_BOUNDARY.md  README.gold-standard.md  README.md  README_RUNTIMES.md  TODO-ON-VPS.md  Untitled  __init__.py  api_surfaces.txt  architecture.txt  archive_perplexity.sh  archive_perplexity_dryrun.sh  class_definitions.txt  config_files.txt  conftest.py  dependencies.txt  deploy.sh  docker-compose.local.dev.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  entrypoints.txt  env.example  env_refs.txt  fastapi_routes.txt  file_tree.md  function_signatures.txt  imports.txt  pyproject.toml  pytest.ini  requirements.txt  (+7 more)
.audit_cache/: analysis_results.json  content_index_hash.txt  manifest.json
.dora/: state.yaml
DOCS-IB/: Extract.md  KERNEL_LOADING.md  MEMORY_SUBSTRATE_INTEGRATION.md  Phase 2 - Kernel Tests.md  Phase 3 - Full Hardening Pack.md  files to add to repo.md  kernel_context_kernel_v2.0.yaml  kernel_meta_cognition_v2.0.yaml  kernel_personality_v2.0.yaml  kernel_private_l9_core_v2.0.yaml  kernel_reasoning_engine_v2.0.yaml  kernel_self_expanding_v2.0.yaml  kernel_thinking_engine_v2.0.yaml  kernel_v1.0_v2.0.yaml  kernel_world_model_v2.0.yaml  new kernels.md  phase 3.md
VPS-Repo-Files/: I think before next commit and vps pull we should.md  README.md  VPS-DIAGNOSTIC-OUTPUT.md
agent/: __init__.py  agent.py
agents/: __init__.py  architect_agent_a.py  (+8 more)
(+1955 files in other folders)
