[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "l9"
version = "1.1.0"
description = "L9 AI OS"
requires-python = ">=3.11"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
